Bug 248561 - Help button does nothing
Summary: Help button does nothing
Status: CLOSED FIXED
Alias: None
Product: KMail Mobile
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-08-21 00:52 UTC by Sabine Faure
Modified: 2010-10-01 21:47 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Sabine Faure 2010-08-21 00:52:30 UTC
Version:           unspecified (using Devel) 
OS:                Linux

If the user clicks on the 'Help' button there is an error pop up dialogue appearing saying: 'Could not find service 'khelpcenter'.

Even if it worked I am not sure that it would be a good idea to have khelpcenter launch on such a small screen...

Reproducible: Always

Steps to Reproduce:
- Launch Kmail-mobile
- Open the 'Actions' tab
- Click on 'Identities'
- Select an identity
- Click on 'Modify' button
- In the 'Edit Identity - Kmail Mobile' dialogue click on the 'Help' button


Actual Results:  
A 'Could not Launch Help Center - KMail Mobile' dialogue appears saying: 'Could not launch the KDE Help Center: Could not find service 'khelpcenter'.

Expected Results:  
I am guessing that khelpcenter should be launched but I am not sure if the desktop meant help is meant for the N900 screen.

N900 Packages, Svn Rev 1165514
Comment 1 Sabine Faure 2010-08-21 00:54:14 UTC
The same thing happen with the help button in the Cryptography tab (Edit Identity dialogue).

N900 Packages, Svn Rev 1165514
Comment 2 Volker Krause 2010-08-24 11:55:25 UTC
SVN commit 1167305 by vkrause:

No help button on mobile, we don't have khelpcenter there.

BUG: 248561


 M  +4 -0      identitydialog.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1167305
Comment 3 Sabine Faure 2010-08-25 16:22:02 UTC
It is corrected now.

The 'Help' button has been removed now.

N900 Packages, Svn Rev 1167481 (aka 4:4.5~20100824.1167481-1maemo1.1167070)