No help button on mobile, we don't have khelpcenter there.

BUG: 248561

svn path=/trunk/KDE/kdepim/kmail/; revision=1167305